--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://bloodfalka.ru/social-network/",
     "name": "social-network",
     "version": "0.1.0",
     "private": true,
@@ -6,14 +7,18 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "axios": "^0.19.2",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
+        "react-awesome-slider": "^4.1.0",
         "react-dom": "^16.13.1",
         "react-favicon": "0.0.18",
         "react-redux": "^7.2.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
+        "react-transition-group": "^4.4.1",
         "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
         "social-media-icons-react": "^1.0.10",
         "styled-components": "^5.1.1"
     },
