--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "react-scripts": "3.4.1",
         "react-transition-group": "^4.4.1",
         "redux": "^4.0.5",
+        "redux-form": "^8.3.6",
         "redux-thunk": "^2.3.0",
+        "reselect": "^4.0.0",
         "social-media-icons-react": "^1.0.10",
         "styled-components": "^5.1.1"
     },
@@ -50,7 +52,8 @@
         "eslint-plugin-prettier": "^3.1.4",
         "husky": "^4.2.5",
         "lint-staged": "^10.2.11",
-        "prettier": "^2.0.5"
+        "prettier": "^2.0.5",
+        "react-test-renderer": "^16.13.1"
     },
     "lint-staged": {
         "*.{js, jsx}": [
