--- a/package.json
+++ b/package.json
@@ -7,6 +7,15 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "@types/jest": "^26.0.9",
+        "@types/node": "^14.0.27",
+        "@types/react": "^16.9.46",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-redux": "^7.1.9",
+        "@types/react-router-dom": "^5.1.5",
+        "@types/redux-form": "^8.2.7",
+        "@typescript-eslint/eslint-plugin": "^3.9.0",
+        "@typescript-eslint/parser": "^3.9.0",
         "axios": "^0.19.2",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
@@ -15,14 +24,15 @@
         "react-favicon": "0.0.18",
         "react-redux": "^7.2.1",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.1",
+        "react-scripts": "^3.4.3",
         "react-transition-group": "^4.4.1",
         "redux": "^4.0.5",
         "redux-form": "^8.3.6",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
         "social-media-icons-react": "^1.0.10",
-        "styled-components": "^5.1.1"
+        "styled-components": "^5.1.1",
+        "typescript": "^3.9.7"
     },
     "scripts": {
         "start": "react-scripts start",
