--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.5",
+        "@types/react-test-renderer": "^16.9.3",
         "@types/redux-form": "^8.2.7",
         "@typescript-eslint/eslint-plugin": "^3.9.1",
         "@typescript-eslint/parser": "^3.9.1",
