--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "@types/classnames": "^2.2.10",
         "@types/jest": "^26.0.9",
         "@types/node": "^14.0.27",
         "@types/react": "^16.9.46",
@@ -19,6 +20,7 @@
         "@typescript-eslint/parser": "^3.9.1",
         "antd": "^4.6.0",
         "axios": "^0.19.2",
+        "classnames": "^2.2.6",
         "eslint-config-airbnb-base": "^14.2.0",
         "eslint-plugin-react": "^7.20.6",
         "eslint-plugin-unicorn": "^21.0.0",
@@ -27,6 +29,7 @@
         "react-awesome-slider": "^4.1.0",
         "react-dom": "^16.13.1",
         "react-favicon": "0.0.18",
+        "react-icons": "^3.11.0",
         "react-id-generator": "^3.0.1",
         "react-intersection-observer": "^8.27.1",
         "react-masonry-css": "^1.0.14",
@@ -38,7 +41,6 @@
         "redux-form": "^8.3.6",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
-        "social-media-icons-react": "^1.0.10",
         "styled-components": "^5.1.1",
         "typescript": "^3.9.7"
     },
