--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^7.2.1",
         "@types/classnames": "^2.2.10",
         "@types/jest": "^26.0.9",
+        "@types/lodash": "^4.14.161",
         "@types/node": "^14.0.27",
         "@types/react": "^16.9.46",
         "@types/react-dom": "^16.9.8",
@@ -24,6 +25,8 @@
         "eslint-config-airbnb-base": "^14.2.0",
         "eslint-plugin-react": "^7.20.6",
         "eslint-plugin-unicorn": "^21.0.0",
+        "formik": "^2.1.5",
+        "lodash": "^4.17.20",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
         "react-awesome-slider": "^4.1.0",
