--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/react-router-dom": "^5.1.5",
         "@types/react-test-renderer": "^16.9.3",
         "@types/redux-form": "^8.2.7",
+        "@types/yup": "^0.29.7",
         "@typescript-eslint/eslint-plugin": "^3.9.1",
         "@typescript-eslint/parser": "^3.9.1",
         "antd": "^4.6.0",
@@ -28,6 +29,7 @@
         "formik": "^2.1.5",
         "lodash": "^4.17.20",
         "node-sass": "^4.14.1",
+        "query-string": "^6.13.1",
         "react": "^16.13.1",
         "react-awesome-slider": "^4.1.0",
         "react-dom": "^16.13.1",
@@ -40,12 +42,14 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.3",
         "react-transition-group": "^4.4.1",
+        "reactjs-popup": "^2.0.3",
         "redux": "^4.0.5",
         "redux-form": "^8.3.6",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
         "styled-components": "^5.1.1",
-        "typescript": "^3.9.7"
+        "typescript": "^3.9.7",
+        "yup": "^0.29.3"
     },
     "scripts": {
         "start": "react-scripts start",
