--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/react-router-dom": "^5.1.5",
         "@types/react-test-renderer": "^16.9.3",
         "@types/redux-form": "^8.2.7",
+        "@types/styled-components": "^5.1.3",
         "@types/yup": "^0.29.7",
         "@typescript-eslint/eslint-plugin": "^3.9.1",
         "@typescript-eslint/parser": "^3.9.1",
@@ -47,7 +48,7 @@
         "redux-form": "^8.3.6",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
-        "styled-components": "^5.1.1",
+        "styled-components": "^5.2.0",
         "typescript": "^3.9.7",
         "yup": "^0.29.3"
     },
